--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [ "config:recommended" ],
-  "labels": [ "area/dependency" ],
+  "automerge": true,
+  "extends": [
+    "config:recommended"
+  ],
+  "labels": [
+    "area/dependency"
+  ],
   "vulnerabilityAlerts": {
     "enabled": true
-  }
+  },
+  "postUpdateOptions": [
+    "gomodTidy"
+  ]
 }
