--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
+      - id: semver_parser
+        uses: release-kit/semver@v2
+        with:
+          string: ${{ github.ref_name }}
       - id: changelog
         uses: requarks/changelog-action@v1
         with:
@@ -28,7 +32,8 @@ jobs:
         with:
           allowUpdates: true
           draft: false
-          makeLatest: true
+          makeLatest: ${{ steps.semver_parser.outputs.prerelease == '' }}
+          prerelease: ${{ steps.semver_parser.outputs.prerelease != '' }}
           name: ${{ github.ref_name }}
           body: ${{ steps.changelog.outputs.changes }}
           token: ${{ github.token }}
