--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,9 @@ jobs:
           cache: false
       - run: |
           make test
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   e2e:
     runs-on: ubuntu-latest
@@ -29,12 +32,10 @@ jobs:
           cache: false
       - run: |
           make \
-            IMG=localhost:5005/manager:e2e \
+            IMG=localhost:5005/registry-operator:e2e \
               cluster \
               docker-build docker-push \
               deploy
       - run: |
           make \
-            CHAINSAW_ARGS='--report-format=XML' \
-              test-e2e
-        id: e2e
+            test-e2e
