--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,7 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/registry.registry-operator.dev_registries.yaml
+- bases/registry-operator.dev_registries.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
