--- a/config/default/metrics_service.yaml
+++ b/config/default/metrics_service.yaml
@@ -12,6 +12,6 @@ spec:
   - name: https
     port: 8443
     protocol: TCP
-    targetPort: 8443
+    targetPort: metrics
   selector:
     control-plane: controller-manager
