--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples of your project ##
 resources:
-- registry_v1alpha1_registry.yaml
+- v1alpha1_registry.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
