--- a/config/samples/v1alpha1_registry.yaml
+++ b/config/samples/v1alpha1_registry.yaml
@@ -1,9 +1,8 @@
-apiVersion: registry.registry-operator.dev/v1alpha1
+apiVersion: registry-operator.dev/v1alpha1
 kind: Registry
 metadata:
   labels:
     app.kubernetes.io/name: registry-operator-next
     app.kubernetes.io/managed-by: kustomize
   name: registry-sample
-spec:
-  # TODO(user): Add fields here
+spec: {}
