docs: added base documentation of simplest deployment
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ theme:
     - header.autohide
     - search.suggest
     - search.highlight
+    - content.code.copy
 
   palette:
     # Palette toggle for light mode
