ci(renovate): set do-not-merge label on helm-values
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,17 @@
   "labels": [
     "area/dependency"
   ],
+  "packageRules": [
+    {
+      "matchManagers": [
+        "helm-values"
+      ],
+      "labels": [
+        "area/dependency",
+        "do-not-merge"
+      ]
+    }
+  ],
   "osvVulnerabilityAlerts": true,
   "vulnerabilityAlerts": {
     "enabled": true,
