feat: added affinity settings
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: localhost:5005/registry-operator
-  newTag: e2e
+  newTag: e2e-1728632953
