--- a/docs/.crd-ref-docs.yaml
+++ b/docs/.crd-ref-docs.yaml
@@ -8,4 +8,4 @@ processor:
 
 render:
   # Version of Kubernetes to use when generating links to Kubernetes API documentation.
-  kubernetesVersion: 'v1.31.1'
+  kubernetesVersion: '1.31'
