ci: use new go-mod tidy diff flag
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,5 +22,4 @@ jobs:
       - run: |
           make lint
       - run: |
-          go mod tidy
-          git diff-index --quiet HEAD --
+          go mod tidy --diff
