chore(kustomize): remove 'next' suffix
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/.github/workflows/semantic-pr.yaml
+++ b/.github/workflows/semantic-pr.yaml
@@ -21,3 +21,14 @@ jobs:
         with:
           requireScope: true
           subjectPattern: ^(?![A-Z]).+$
+          scopes: |
+            deps
+            operator
+            registry
+            cache
+            example
+            kustomize
+            e2e
+            integration
+            unit
+            gh-actions
