--- a/config/samples/v1alpha1_registry.yaml
+++ b/config/samples/v1alpha1_registry.yaml
@@ -2,7 +2,7 @@ apiVersion: registry-operator.dev/v1alpha1
 kind: Registry
 metadata:
   labels:
-    app.kubernetes.io/name: registry-operator-next
+    app.kubernetes.io/name: registry-operator
     app.kubernetes.io/managed-by: kustomize
   name: registry-sample
 spec: {}
