--- a/config/network-policy/allow-metrics-traffic.yaml
+++ b/config/network-policy/allow-metrics-traffic.yaml
@@ -5,7 +5,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    app.kubernetes.io/name: registry-operator-next
+    app.kubernetes.io/name: registry-operator
     app.kubernetes.io/managed-by: kustomize
   name: allow-metrics-traffic
   namespace: system
