--- a/config/rbac/registry_editor_role.yaml
+++ b/config/rbac/registry_editor_role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: registry-operator-next
+    app.kubernetes.io/name: registry-operator
     app.kubernetes.io/managed-by: kustomize
   name: registry-editor-role
 rules:
