--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/name: registry-operator-next
+    app.kubernetes.io/name: registry-operator
     app.kubernetes.io/managed-by: kustomize
   name: manager-rolebinding
 roleRef:
