chore: add new scopes
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/.github/workflows/semantic-pr.yaml
+++ b/.github/workflows/semantic-pr.yaml
@@ -27,8 +27,11 @@ jobs:
             registry
             cache
             example
+            image
             kustomize
             e2e
             integration
             unit
             gh-actions
+            build-system
+            tools
