--- a/test/e2e/tagged/chainsaw-test.yaml
+++ b/test/e2e/tagged/chainsaw-test.yaml
@@ -33,7 +33,7 @@ spec:
               metadata:
                 name: tagged
               spec:
-                image: docker.io/library/registry:2.8.3
+                image: docker.io/library/registry:3.0.0-rc.3
     - name: Wait for Registry status to be ready and resources to be deployed
       try:
         - assert:
@@ -44,7 +44,7 @@ spec:
                 name: tagged
               status:
                 ready: true
-                version: "2.8.3"
+                version: "3.0.0-rc.3"
         - assert:
             resource:
               apiVersion: apps/v1
@@ -56,13 +56,13 @@ spec:
                   app.kubernetes.io/instance: (join('.', [$namespace, 'tagged']))
                   app.kubernetes.io/part-of: registry
                   app.kubernetes.io/component: registry
-                  app.kubernetes.io/version: "2.8.3"
+                  app.kubernetes.io/version: "3.0.0-rc.3"
               spec:
                 template:
                   spec:
                     containers:
                       - name: distribution
-                        image: docker.io/library/registry:2.8.3
+                        image: docker.io/library/registry:3.0.0-rc.3
                         command: [ "registry" ]
                         args: [ "serve", "/etc/distribution/config.yaml" ]
                         volumeMounts:
@@ -105,7 +105,7 @@ spec:
                   app.kubernetes.io/instance: (join('.', [$namespace, 'tagged']))
                   app.kubernetes.io/part-of: registry
                   app.kubernetes.io/component: registry
-                  app.kubernetes.io/version: "2.8.3"
+                  app.kubernetes.io/version: "3.0.0-rc.3"
         - assert:
             resource:
               apiVersion: v1
@@ -117,4 +117,4 @@ spec:
                   app.kubernetes.io/instance: (join('.', [$namespace, 'tagged']))
                   app.kubernetes.io/part-of: registry
                   app.kubernetes.io/component: registry
-                  app.kubernetes.io/version: "2.8.3"
+                  app.kubernetes.io/version: "3.0.0-rc.3"
