--- a/internal/manifests/registry/test/dev-config.yaml
+++ b/internal/manifests/registry/test/dev-config.yaml
@@ -1,82 +1,32 @@
-version: "0.1"
+version: '0.1'
 log:
-    level: debug
-    fields:
-        environment: operator-default
-        service: registry
-    hooks:
-        - disabled: true
-          type: mail
-          levels:
-            - panic
-          options:
-            smtp:
-                addr: mail.example.com:25
-                username: mailuser
-                password: password
-                insecure: true
-            from: sender@example.com
-            to:
-                - errors@example.com
+  level: debug
+  fields:
+    service: registry
+    environment: development
 storage:
-    cache:
-        blobdescriptor: redis
     delete:
-        enabled: true
+      enabled: true
+    cache:
+        blobdescriptor: inmemory
     filesystem:
         rootdirectory: /var/lib/registry
     maintenance:
         uploadpurging:
             enabled: false
+    tag:
+      concurrencylimit: 8
 http:
     addr: :5000
-    headers:
-        X-Content-Type-Options:
-            - nosniff
     debug:
         addr: :5001
         prometheus:
             enabled: true
             path: /metrics
-notifications:
-    events:
-        includereferences: true
-    endpoints:
-        - name: local-5003
-          disabled: true
-          url: http://localhost:5003/callback
-          headers:
-            Authorization:
-                - Bearer <an example token>
-          timeout: 1s
-          threshold: 10
-          backoff: 1s
-          ignoredmediatypes: []
-          ignore:
-            mediatypes: []
-            actions: []
-        - name: local-8083
-          disabled: true
-          url: http://localhost:8083/callback
-          headers: {}
-          timeout: 1s
-          threshold: 10
-          backoff: 1s
-          ignoredmediatypes: []
-          ignore:
-            mediatypes: []
-            actions: []
-redis:
-    addr: localhost:6379
-    dialtimeout: 10ms
-    readtimeout: 10ms
-    writetimeout: 10ms
-    pool:
-        maxidle: 16
-        maxactive: 64
-        idletimeout: 5m0s
+    headers:
+        X-Content-Type-Options: [nosniff]
 health:
-    storagedriver:
-        enabled: true
-        interval: 10s
-        threshold: 3
+  storagedriver:
+    enabled: true
+    interval: 10s
+    threshold: 3
