--- a/config/crd/bases/registry-operator.dev_registries.yaml
+++ b/config/crd/bases/registry-operator.dev_registries.yaml
@@ -969,6 +969,44 @@ spec:
                         x-kubernetes-list-type: atomic
                     type: object
                 type: object
+              auth:
+                description: Auth
+                properties:
+                  htpasswd:
+                    description: Htpasswd
+                    properties:
+                      realm:
+                        default: basic-realm
+                        description: Realm
+                        type: string
+                      secret:
+                        description: Htpasswd
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            default: ""
+                            description: |-
+                              Name of the referent.
+                              This field is effectively required, but due to backwards compatibility is
+                              allowed to be empty. Instances of this type with an empty value here are
+                              almost certainly wrong.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                        x-kubernetes-map-type: atomic
+                    required:
+                    - secret
+                    type: object
+                type: object
               image:
                 description: Image indicates the container image to use for the Registry.
                 type: string
