feat: include s3 storage source
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,8 +7,15 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - configmaps
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
   - persistentvolumeclaims
+  - secrets
   - services
   verbs:
   - create
@@ -18,13 +25,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-  - patch
 - apiGroups:
   - apps
   resources:
