fix: apply code suggestions
Signed-off-by: Mateusz Urbanek <mateusz.urbanek.98@gmail.com>

--- a/test/e2e/storage/s3/chainsaw-test.yaml
+++ b/test/e2e/storage/s3/chainsaw-test.yaml
@@ -175,7 +175,7 @@ spec:
                 ENDPOINT_URL: play.min.io
                 BUCKET_NAME: s3-registry-test-update
                 REGION: us-east-1
-    - name: Wait for Registry status to be ready and resouces to be updated
+    - name: Wait for Registry status to be ready and resources to be updated
       try:
         - assert:
             resource:
