--- a/charts/registry-operator/templates/serviceaccount.yaml
+++ b/charts/registry-operator/templates/serviceaccount.yaml
@@ -4,5 +4,7 @@ metadata:
   name: {{ include "registry-operator.fullname" . }}-controller-manager
   labels:
     {{- include "registry-operator.labels" . | nindent 4 }}
+  {{- with .Values.controllerManager.serviceAccount.annotations }}
   annotations:
-    {{- toYaml .Values.controllerManager.serviceAccount.annotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
