--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: localhost:5005/registry-operator
-  newTag: dev-eeb077-dirty
+  newName: ghcr.io/registry-operator/registry-operator
+  newTag: main
