--- a/charts/registry-operator/templates/mutating-webhook-configuration.yaml
+++ b/charts/registry-operator/templates/mutating-webhook-configuration.yaml
@@ -16,7 +16,7 @@ webhooks:
       namespace: '{{ .Release.Namespace }}'
       path: /mutate-registry-operator-dev-v1alpha1-registry
   failurePolicy: Fail
-  name: mregistry-v1alpha1.kb.io
+  name: {{ include "registry-operator.fullname" . }}-mutating-webhook
   rules:
   - apiGroups:
     - registry-operator.dev
