--- a/test/e2e/auth/htpasswd/chainsaw-test.yaml
+++ b/test/e2e/auth/htpasswd/chainsaw-test.yaml
@@ -34,6 +34,7 @@ spec:
                 name: htpasswd
               type: Opaque
               data:
+                # htpasswd -Bbn testuser testpassword
                 auth: |
                   testuser:$2y$05$RQyrk0CrVzHu4.kBVoR0b.g.jgPXcZuEqZi3zCwkxI6CqPIqt3AfS
     - name: Create htpasswd registry
@@ -151,3 +152,22 @@ spec:
                   app.kubernetes.io/part-of: registry
                   app.kubernetes.io/component: registry
                   app.kubernetes.io/version: "latest"
+    - name: Start I/O validation
+      try:
+        - apply:
+            resource:
+              apiVersion: batch/v1
+              kind: Job
+              metadata:
+                name: validation
+              spec: # TODO
+    - name: Check if I/O validation completed succesfully
+      try:
+        - assert:
+            resource:
+              apiVersion: batch/v1
+              kind: Job
+              metadata:
+                name: validation
+              status:
+                succeeded: 1
