Add org.opencontainers.image.description annotation to Docker image
Adds the org.opencontainers.image.description annotation to the container image manifest in the release workflow. This provides additional metadata about the image according to the OCI image specification.

Fixes #53

Signed-off-by: Allen Elzayn <maedeeaew@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,6 +65,8 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.event.repository.owner.name }}/registry-operator:${{ github.ref_name }}
           build-args: VERSION=${{ github.ref_name }}
+          annotations: |
+            org.opencontainers.image.description
           labels: |
             org.opencontainers.image.title="registry-operator"
             org.opencontainers.image.authors="The Registry Operator Authors"
